--- a/BlogEntity/BlogEntity/Web.config
+++ b/BlogEntity/BlogEntity/Web.config
@@ -14,6 +14,19 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
+  <connectionStrings>
+    <add name="BlogContext" providerName="MySql.Data.MySqlClient"
+        connectionString="server=localhost;port=3306;database=nomedobanco;uid=root;password=root"/>
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient"
+          type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6"/>
+      <provider invariantName="System.Data.SqlClient"
+          type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
