Add-migration inicial + update-database

--- a/BlogEntity/BlogEntity/BlogEntity.csproj
+++ b/BlogEntity/BlogEntity/BlogEntity.csproj
@@ -119,6 +119,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infra\BlogContext.cs" />
+    <Compile Include="Migrations\201805150206035_inicial.cs" />
+    <Compile Include="Migrations\201805150206035_inicial.Designer.cs">
+      <DependentUpon>201805150206035_inicial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -136,6 +140,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201805150206035_inicial.resx">
+      <DependentUpon>201805150206035_inicial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
